# Equity_marke_strategizer

./: .gitignore  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  EquityStrategy.ipynb  EquityStrategy.nbconvert.ipynb  README.md  README_DEPLOYMENT.md  STATUS.txt  VALIDATION_REPORT.md  index.py  main.py  pyproject.toml  requirements.txt  vercel.json
api/: strategy.py
public/: index.html
static/: script.js
