[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "seed-equity-strategizer"
version = "1.0.0"
description = "Advanced equity strategy analysis platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "yfinance==0.2.32",
    "pandas==2.1.1",
    "numpy==1.26.2",
    "scipy==1.11.4",
    "plotly==5.18.0",
    "fredapi==0.5.1"
]
